--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+Certo. Aqui está o seu arquivo `.gitignore` com a proteção do banco de dados adicionada, sem mexer em nenhuma das suas regras existentes.
+
+Cole este código, substituindo o conteúdo atual do seu arquivo `.gitignore`.
+
+```
 # ---- PYTHON ----
 __pycache__/
 *.py[cod]
@@ -45,3 +50,6 @@ htmlcov/
 *.bak
 *.swp
 *.tmp
+
+# ---- PROTEÇÃO DE BANCO DE DADOS LOCAL ----
+db.sqlite3
