--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,36 +34,20 @@ jobs:
     steps:
       - name: 1. Executar comandos de deploy via API (Git Pull, Migrações)
         run: |
-          # O caminho do seu projeto no PythonAnywhere
           PROJECT_PATH="/home/${{ env.PA_USERNAME }}/genuss.pythonanywhere.com"
-
-          COMMAND_STRING="cd ${PROJECT_PATH}\ngit pull origin main\npip install -r requirements.txt\npython manage.py collectstatic --noinput\npython manage.py migrate"
-          
-          CONSOLE_JSON=$(curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/consoles/" \
-          -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
-          -d "executable=bash")
-
-          CONSOLE_ID=$(echo $CONSOLE_JSON | sed -n 's/.*"id":\([0-9]*\).*/\1/p')
-          if [ -z "$CONSOLE_ID" ]; then
-            echo "ERRO: Falha ao criar console ou JSON inesperado."
-            echo "Resposta da API: $CONSOLE_JSON"
-            exit 1
-          fi
-          echo "Console ID: $CONSOLE_ID"
-          
-          sleep 5 
-          
-          echo "Enviando comandos: git pull, pip install, migrate..."
-          
-          curl -s -X POST "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/consoles/$CONSOLE_ID/send_input/" \
-          -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
-          -d "input=${COMMAND_STRING}\n" # O '\n' final garante que o comando seja executado
-
-          sleep 30
-
-          echo "Limpando o console..."
-          curl -s -X DELETE "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/consoles/$CONSOLE_ID/" \
-          -H "Authorization: Token ${{ env.PA_API_TOKEN }}"
+      
+          COMMAND_STRING="cd ${PROJECT_PATH}
+          git pull origin main
+          pip install -r requirements.txt
+          python manage.py collectstatic --noinput
+          python manage.py migrate"
+      
+          echo "Executando comandos no PythonAnywhere..."
+          curl -X POST \
+            -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            -d "{\"commands\": \"${COMMAND_STRING}\"}" \
+            "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/bash/"
 
       - name: 2. Recarregar (Reload) a Aplicação Web
         run: |
