Ajusta workflow para usar deploy.sh remoto no PythonAnywhere

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,48 +25,29 @@ jobs:
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
-    
+
     env:
       PA_USERNAME: ${{ secrets.PA_USERNAME }}
       PA_API_TOKEN: ${{ secrets.PA_API_TOKEN }}
       PA_DOMAIN: ${{ secrets.PA_DOMAIN }}
 
     steps:
-      - name: 1. Fazer checkout do repositório
-        uses: actions/checkout@v4
+    - name: 1. Fazer checkout do repositório
+      uses: actions/checkout@v4
 
-      - name: 2. Enviar arquivo deploy.sh para PythonAnywhere
-        run: |
-          echo "Enviando deploy.sh para PythonAnywhere..."
-          
-          curl -X PUT \
-            -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
-            --upload-file deploy.sh \
-            "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/files/path/home/${{ env.PA_USERNAME }}/deploy.sh"
+    - name: 2. Executar deploy.sh no PythonAnywhere
+      run: |
+        echo "Executando deploy.sh remoto..."
 
-      - name: 3. Tornar o deploy.sh executável
-        run: |
-          echo "Tornando deploy.sh executável..."
-          
-          curl -X POST \
-            -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"commands": "chmod +x ~/deploy.sh"}' \
-            "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/bash/"
+        curl -X POST \
+          -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{"commands": "/home/'"${{ env.PA_USERNAME }}"'/deploy.sh"}' \
+          "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/bash/"
 
-      - name: 4. Executar o deploy.sh no PythonAnywhere
-        run: |
-          echo "Executando deploy.sh remoto..."
-          
-          curl -X POST \
-            -H "Authorization: Token ${{ env.PA_API_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"commands": "~/deploy.sh"}' \
-            "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/bash/"
-
-      - name: 5. Fazer reload da aplicação
-        run: |
-          echo "Recarregando a aplicação web..."
-          curl -s -X POST \
-            "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/webapps/${{ env.PA_DOMAIN }}/reload/" \
-            -H "Authorization: Token ${{ env.PA_API_TOKEN }}"
+    - name: 3. Fazer reload da aplicação
+      run: |
+        echo "Recarregando a aplicação web..."
+        curl -s -X POST \
+          "https://www.pythonanywhere.com/api/v0/user/${{ env.PA_USERNAME }}/webapps/${{ env.PA_DOMAIN }}/reload/" \
+          -H "Authorization: Token ${{ env.PA_API_TOKEN }}"
